poke/testsuite/poke.pkl/sr-diag-1.pk
/* { dg-do compile } */

defvar a = 20 .>> 3#B; /* { dg-error "expected an integer" } */
